--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
 <body>
     <div class="page">
         <header>
-            <img src="./assets/Vector (1).svg" alt="">
             <nav>
+                <img src="./assets/Vector (1).svg" alt="">
                 <a href="">Home</a>
                 <a href="">Galeria</a>
             </nav>
-            <input type="search">
+            <form action="">
+                <input type="search" placeholder="Pesquise por imagens e coleções"> 
+            </form>
             <img src="./assets/IMG_6938.JPEG" alt="" id="eu">
         </header>
         <main>
@@ -105,3 +107,4 @@
     </div>
 </body>
 </html>
+
