--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h1>Galeria</h1>
             <div class="container">
                 
-                <div class="card">
+                <div class="card" style="--delay:.4s">
                     <img src="./assets/01.png" alt="">
                     <div class="card-text">
                         <h2>Workspace elétrica</h2>
@@ -36,7 +36,7 @@
                     </div>
                 </div>
 
-                <div class="card">
+                <div class="card" style="--delay:.6s">
                     <img src="./assets/02.png" alt="">
                     <div class="card-text">
                         <h2>Dark and red</h2>
@@ -44,7 +44,7 @@
                     </div>
                 </div>
 
-                <div class="card">
+                <div class="card" style="--delay:.8s">
                     <img src="./assets/03.png" alt="">
                     <div class="card-text">
                         <h2>Organização e grids</h2>
@@ -52,7 +52,7 @@
                     </div>
                 </div>
 
-                <div class="card">
+                <div class="card" style="--delay:1s">
                     <img src="./assets/04.png" alt="">
                     <div class="card-text">
                         <h2>Colméia</h2>
@@ -60,7 +60,7 @@
                     </div>
                 </div>
 
-                <div class="card">
+                <div class="card" style="--delay:1.2s">
                     <img src="./assets/05.png" alt="">
                     <div class="card-text">
                         <h2>Setup de escritor</h2>
@@ -68,7 +68,7 @@
                     </div>
                 </div>
 
-                <div class="card">
+                <div class="card" style="--delay:1.4s">
                     <img src="./assets/06.png" alt="">
                     <div class="card-text">
                         <h2>Ergonomia e cores</h2>
@@ -76,7 +76,7 @@
                     </div>
                 </div>
 
-                <div class="card">
+                <div class="card" style="--delay:1.6s">
                     <img src="./assets/07.png" alt="">
                     <div class="card-text">
                         <h2>Show de luzes</h2>
@@ -84,7 +84,7 @@
                     </div>
                 </div>
 
-                <div class="card">
+                <div class="card" style="--delay:1.8s">
                     <img src="./assets/08.png" alt="">
                     <div class="card-text">
                         <h2>Deep purple</h2>
@@ -92,7 +92,7 @@
                     </div>
                 </div>
 
-                <div class="card">
+                <div class="card" style="--delay:2s">
                     <img src="./assets/09.png" alt="">
                     <div class="card-text">
                         <h2>Multi-Screen</h2>
